# flaskr

./: .coverage  README.md  pyproject.toml
flaskr/: __init__.py  auth.py  blog.py  db.py
flaskr/templates/blog/: detail.html
instance/: flaskr.sqlite
tests/: test_auth.py  test_blog.py  test_db.py
