# the pyproject.toml file is used make __init__.py the core runnable
# application and use the project in packages pattern

[project]
name = "flaskr"
version = "1.0.0"
description = "The basic blog app built in Flask tutorial"
dependencies = [
    "flask",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
testpaths = ['tests']

[tool.coverage.run]
branch = true
source = ['flaskr']